# ANPR_Project

./: .gitattributes  README.md
CV_Model/: NUMBER_PLATE_DETECTION_YOLOV8.ipynb  README.md
CV_Model/datasets/Number_plate-1/: README.dataset.txt  README.roboflow.txt  data.yaml
CV_Model/datasets/Number_plate-1/test/labels/: 07154d0e-72b5-44c9-ace3-c8ca84f95977_jpg.rf.9ab734ecb0cbe47986f3e30515bf6259.txt  Cars158predicted-0_png_jpg.rf.5fe6d3a8b1f88b3e5de7d615b15485bb.txt  f458514df66afbea2_jpg.rf.8e277fc6df4cf60e88ec0fa73d7cff68.txt  image28_jpeg_jpg.rf.0b3044a998d774a847d711f1ac12edd3.txt  images123_jpg.rf.0cc218af00e3982b3907c0ede44faa73.txt  matricula-color-automovil-legalidad-servicio-vtc_jpg.rf.6d8725afabbba268675ab94b1074fbdb.txt
CV_Model/datasets/Number_plate-1/train/labels/: 00125d8d-09b8-4a6e-9d2f-e2c240d22b38_jpg.rf.9f4287b31ba5eac4ab6d2ccfdb8548b4.txt  00125d8d-09b8-4a6e-9d2f-e2c240d22b38_jpg.rf.b0de5c5df054576f0e26e5b070853854.txt  00125d8d-09b8-4a6e-9d2f-e2c240d22b38_jpg.rf.d207791c02ba88e9938b48c878c23bb8.txt  00125d8d-09b8-4a6e-9d2f-e2c240d22b38_jpg.rf.ea6a9c1f90b589db0921d53956df664e.txt  004c5286-7bae-4e0b-8041-c030209642e5_jpg.rf.1d5ae197ac6b2b0b2c7c6d02e6765d74.txt  00_jpg.rf.42a6dd513054c0ec43e8acc8b154e7e5.txt  (+1384 more)
CV_Model/runs/detect/train/: args.yaml  events.out.tfevents.1707784202.a5cd62984d1e.2389.0  results.csv
main_project/: add_missing_data.py  interface.py  main.py  pyproject.toml  requirements.txt  util.py  visualise.py
main_project/assets/results/: test.csv  test_interpolated.csv
main_project/models/: model_1.pt  model_3.pt
(+171 files in other folders)
